.metadata/.plugins/org.eclipse.cdt.ui/Videojuego.build.log
11:40:12 **** Incremental Build of configuration Debug for project Videojuego ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Videojuego.o" "..\\src\\Videojuego.cpp" 
..\src\Videojuego.cpp:18:1: error: 'Videojuego' does not name a type; did you mean 'VideoJuego'?
 Videojuego::~Videojuego() {
 ^~~~~~~~~~
 VideoJuego
..\src\Videojuego.cpp:22:1: error: 'Videojuego' does not name a type; did you mean 'VideoJuego'?
 Videojuego::Videojuego() {
 ^~~~~~~~~~
 VideoJuego

11:40:12 Build Failed. 2 errors, 0 warnings. (took 550ms)

